// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component >>> FlatButton Render CustomFlatButton 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#FFFFFF",
        "borderRadius": 50,
        "borderWidth": 2,
        "paddingHorizontal": 50,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFFFFF",
          "fontWeight": "bold",
        }
      }
    >
      test
    </Text>
  </Component>
</TouchableOpacity>
`;

exports[`Component >>> FlatButton Render DefaultFlatButton 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "borderColor": "red",
        "borderRadius": 5,
        "borderWidth": 1,
        "paddingHorizontal": 50,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    >
      test
    </Text>
  </Component>
</TouchableOpacity>
`;
